fix(marketplace): update marketplace controller concurrency handling